docs(swagger): adiciona notações do swagger para profiles e adiciona novos cenários de teste em rest.http
